opened a big can of raid and squashed some heckin' bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,10 @@ input[type='text'] {
     background-color: #fcb64d;
 }
 
+.nav {
+    z-index: 99;   
+}
+
 .btn {
     width: 100%;
 }
